Fixed bug 254356: incorrect line endings Undefined ICAL_UNIX_NEWLINE which doesn't comply with rfc2445 Imported fix from libical.cvs to icalpropery.c